tests/NormalTests/paczka1/small_fuzzy/61076254.err
Error in line 2: DglY A870 25,4
Error in line 3: YgpLRsa2L8 A870 95,7
Error in line 11: S527 S527 67,4
Error in line 13: 4s4QCFsR0q S527 12,1
Error in line 14: 4s4QCFsR0q S884 13,1
